# zerodns

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.toml  docker-compose.yml  hosts  justfile
.github/actions-rs/: grcov.yml
.github/workflows/: docker-publish.yml  lint.yml  rust-publish.yml  rust.yml
src/: bootstrap.rs  builtin.rs  cache.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
src/cache/: memory.rs  mod.rs
src/client/: doh.rs  dot.rs  lookup.rs  mod.rs  system.rs  tcp.rs  udp.rs
src/cmds/: mod.rs  resolve.rs  run.rs
src/ext/: mod.rs  resolvconf.rs
src/filter/: chinadns.rs  hosts.rs  lua.rs  misc.rs  mod.rs  noop.rs  proto.rs  proxyby.rs  registry.rs  wasm.rs
src/handler/: filtered.rs  mod.rs  proto.rs  ruled.rs
src/logger/: logger.rs  mod.rs  rotate.rs
src/misc/: http.rs  mod.rs  resolvconf.rs  tcp.rs  tls.rs
src/protocol/: dns.rs  frame.rs  mod.rs  tcp.rs
src/server/: filtered.rs  handler.rs  helper.rs  mod.rs  tcp.rs  udp.rs
