[package]
name = "zerodns"
version = "0.1.0-alpha.4"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jjeffcaii/zerodns"
homepage = "https://github.com/jjeffcaii/zerodns"
description = "A DNS server in Rust, which is inspired from chinadns/dnsmasq."
include = [
    "**/*.rs",
    "Cargo.toml",
]

[profile.release]
lto = "thin"

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
byteorder = "1.5.0"
bytes = "1.5.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.64"
cfg-if = "1.0.0"
clap = { version = "4.4.4", features = ["derive"] }
once_cell = "1.18.0"
futures = "0.3.28"
parking_lot = "0.12.1"
async-trait = "0.1.77"
smallvec = { version = "1.13.1", features = ["write"] }
ahash = "0.8.7"
hashbrown = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.10"
glob = "0.3.1"
maxminddb = "0.24.0"
moka = { version = "0.12", features = ["future", "sync"] }
url = "2.5.0"
regex = "1.10.3"
hex = "0.4.3"
strum = { version = "0.26.1", default-features = false, features = ["strum_macros", "derive"] }
strum_macros = "0.26.1"
deadpool = "0.12.1"
socket2 = "0.5.5"
mlua = { version = "0.9.9", features = ["luajit", "vendored", "serialize", "async", "macros", "send", "parking_lot"] }

[dev-dependencies]
hex = "0.4.3"
