[package]
name = "zerodns"
version = "0.1.0-alpha.6"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Jeffsky Tsai <jjeffcaii@outlook.com>"]
repository = "https://github.com/jjeffcaii/zerodns"
homepage = "https://github.com/jjeffcaii/zerodns"
description = "A DNS server in Rust, which is inspired from chinadns/dnsmasq."
include = [
    "**/*.rs",
    "Cargo.toml",
]

[profile.release]
lto = "thin"

[build-dependencies]
string_cache_codegen = "0.5"

[dependencies]
log = "0.4"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.7.0"
slog-stdlog = "4.1.1"
slog-scope = "4.4.0"
chrono = "0.4"
bytesize = { version = "1.3", features = ["serde"] }
byteorder = "1.5"
base64 = "0.22"
bytes = "1.9"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
anyhow = "1"
thiserror = "2.0"
cfg-if = "1"
clap = { version = "4.5", features = ["derive", "cargo"] }
once_cell = "1.18"
futures = "0.3"
parking_lot = "0.12"
async-trait = "0.1"
smallvec = { version = "1.13", features = ["write"] }
ahash = "0.8"
hashbrown = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
maxminddb = "0.24"
moka = { version = "0.12", features = ["future", "sync"] }
url = "2.5"
regex = "1.10"
hex = "0.4"
strum = { version = "0.26", default-features = false, features = ["strum_macros", "derive"] }
strum_macros = "0.26"
deadpool = "0.10"
socket2 = "0.5"
mlua = { version = "0.9.9", features = ["luajit", "vendored", "serialize", "async", "macros", "send", "parking_lot"] }
garde = { version = "0.20", features = ["serde", "derive", "regex"] }
rustls = "0.23"
webpki-roots = "0.26"
tokio-rustls = "0.26"
httparse = "1.9"
http = "1.2"
string_cache = "0.8"
rand = "0.8"
resolv-conf = "0.7"

[dev-dependencies]
hex = "0.4"
pretty_env_logger = "0.5"
